--- a/publications/index.html
+++ b/publications/index.html
@@ -291,6 +291,7 @@
           <div class="links">
             <a class="abstract btn btn-sm z-depth-0" role="button">Abstract</a>
             <a href="https://ieeexplore.ieee.org/abstract/document/10181177" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">IEEE Explore</a>
+	    <a href="https://5x0.7f6.myftpupload.com/awards/" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">SCALE 2023 Award</a>
             <a href="/assets/pdf/CCGRID23_presentation.pdf" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">Presentation Slides</a>
             <a href="https://youtu.be/fMSbSHhsW0o" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">Demo Video</a>
           </div>
@@ -438,7 +439,7 @@
     
 <footer class="fixed-bottom">
   <div class="container mt-0">
-    © Copyright 2023 Youssef Elmougy.
+    © Copyright 2024 Youssef Elmougy.
     Please <a href="mailto:yelmougy3@gatech.edu">email me</a> to get in contact! 
 
     
