--- a/publications/index.html
+++ b/publications/index.html
@@ -275,7 +275,7 @@
 
       <div class="row">
         <div class="col-sm-2">
-<img style="box-shadow:4px 4px 8px #000; border-radius:2.5%; width: 100%; max-width: 150px; height: auto" src="/assets/pdf/actorvizaddrtx.jpg">
+<img style="box-shadow:4px 4px 8px #000; border-radius:2.5%; width: 100%; max-width: 150px; height: auto" src="/assets/pdf/sc23poster.png">
 			<!--">-->
 </div>
 
