--- a/publications/index.html
+++ b/publications/index.html
@@ -191,7 +191,7 @@
 
       <div class="row">
         <div class="col-sm-2">
-<img style="box-shadow:4px 4px 8px #000; border-radius:2.5%; width: 100%; max-width: 150px; height: auto" src="/assets/pdf/genome_algorithm_5.png">
+<img style="box-shadow:4px 4px 8px #000; border-radius:2.5%; width: 100%; max-width: 150px; height: auto" src="/assets/pdf/hpccloud.jpg">
 			<!--">-->
 </div>
 
@@ -230,7 +230,7 @@
 
       <div class="row">
         <div class="col-sm-2">
-<img style="box-shadow:4px 4px 8px #000; border-radius:2.5%; width: 100%; max-width: 150px; height: auto" src="/assets/pdf/genome_algorithm_5.png">
+<img style="box-shadow:4px 4px 8px #000; border-radius:2.5%; width: 100%; max-width: 150px; height: auto" src="/assets/pdf/execmodel.png">
 			<!--">-->
 </div>
 
