--- a/publications/index.html
+++ b/publications/index.html
@@ -412,6 +412,9 @@
             <a href="/assets/pdf/SIGKDD23_presentation.pdf" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">Presentation Slides</a>
           </div>
 
+		<div class="badges"> <span class="altmetric-embed" data-badge-type="2" data-badge-popover="right" data-altmetric-id="248277"></span> <span class="__dimensions_badge_embed__" data-doi="10.1145/3580305.3599803" data-style="small_rectangle" data-legend="hover-right" style="margin-bottom: 3px;"></span> 
+			<a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=FazAPJYAAAAJ&citation_for_view=FazAPJYAAAAJ:UeHWp8X0CEIC" aria-label="Google Scholar link" role="button" rel="external nofollow noopener" target="_blank">
+
           <!-- Hidden abstract block -->
           <div class="abstract hidden">
             <p>Blockchain provides the unique and accountable channel for financial forensics by mining its open and immutable transaction data. A recent surge has been witnessed by training machine learning models with cryptocurrency transaction data for anomaly detection, such as money laundering and other fraudulent activities. This paper presents a holistic applied data science approach to fraud detection in the Bitcoin network with two original contributions.</p>
