--- a/publications/index.html
+++ b/publications/index.html
@@ -413,7 +413,7 @@
           </div>
 
 		<div class="badges"> <span class="altmetric-embed" data-badge-type="2" data-badge-popover="right" data-altmetric-id="248277"></span> <span class="__dimensions_badge_embed__" data-doi="10.1145/3580305.3599803" data-style="small_rectangle" data-legend="hover-right" style="margin-bottom: 3px;"></span> 
-			<a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=FazAPJYAAAAJ&citation_for_view=FazAPJYAAAAJ:UeHWp8X0CEIC" aria-label="Google Scholar link" role="button" rel="external nofollow noopener" target="_blank"></a>div>
+			<a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=FazAPJYAAAAJ&citation_for_view=FazAPJYAAAAJ:UeHWp8X0CEIC" aria-label="Google Scholar link" role="button" rel="external nofollow noopener" target="_blank"> <img src="https://img.shields.io/badge/scholar-25K-4285F4?logo=googlescholar&amp;labelColor=beige" alt="25K Google Scholar citations"> </a>div>
 
           <!-- Hidden abstract block -->
           <div class="abstract hidden">
