--- a/publications/index.html
+++ b/publications/index.html
@@ -317,7 +317,7 @@
 
           <!-- Journal/Book title and date -->
           <div class="periodical"> 
-            <em>IEEE/ACM International Symposium on Cluster Computing and the Grid (CCGRID)</em>, 2024
+            <em>IEEE/ACM International Symposium on Cluster Computing and the Grid (CCGRID)</em>, 2024. <small>🏅<span style="color: #F29105 !important">Won the <a href="https://2024.ccgrid-conference.org/awards/" target="_blank" rel="noopener noreferrer">IEEE TCSC SCALE 2024 Award</a></span></small>
           </div>
         
           <!-- Links/Buttons -->
@@ -441,7 +441,7 @@
 
           <!-- Journal/Book title and date -->
           <div class="periodical"> 
-            <em>IEEE/ACM International Symposium on Cluster Computing and the Grid (CCGRID)</em>, 2023
+            <em>IEEE/ACM International Symposium on Cluster Computing and the Grid (CCGRID)</em>, 2023. <small>🏅<span style="color: #F29105 !important">Won the <a href="https://5x0.7f6.myftpupload.com/awards/" target="_blank" rel="noopener noreferrer">IEEE TCSC SCALE 2023 Award</a></span></small>
           </div>
         
           <!-- Links/Buttons -->
