--- a/index.html
+++ b/index.html
@@ -343,6 +343,7 @@
             <a href="https://arxiv.org/pdf/2306.06108.pdf" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">ArXiv PDF</a>
 	    <a href="https://github.com/git-disl/EllipticPlusPlus" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
             <a href="/assets/pdf/SIGKDD23_presentation.pdf" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">Presentation Slides</a>
+	    <a href="https://github.com/git-disl/EllipticPlusPlus" class="btn btn-sm z-depth-0" role="button" style="padding: 0px;" target="_blank" rel="noopener noreferrer"> <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/git-disl/EllipticPlusPlus?style=flat-square&amp;logo=github" style="height: 22px; padding: 0%; margin: 0%;"> </a>
           </div>
 
           <!-- Hidden abstract block -->
