--- a/index.html
+++ b/index.html
@@ -261,8 +261,9 @@
           <div class="links">
             <a class="abstract btn btn-sm z-depth-0" role="button">Abstract</a>
             <a href="https://ieeexplore.ieee.org/abstract/document/10528922" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">IEEE Explore</a>
+	   <a href="/assets/pdf/ISC24_presentation.pdf" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">Presentation Slides</a>
 	   <a href="https://github.com/youssefelmougy/jaccard-selector" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
-            <a href="/assets/pdf/ISC24_presentation.pdf" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">Presentation Slides</a>
+	   <a href="https://github.com/youssefelmougy/jaccard-selector" class="btn btn-sm z-depth-0" role="button" style="padding: 0px;" target="_blank" rel="noopener noreferrer"> <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/youssefelmougy/jaccard-selector?style=flat-square&amp;logo=github" style="height: 22px; padding: 0%; margin: 0%;"> </a>
           </div>
 
           <!-- Hidden abstract block -->
@@ -341,8 +342,8 @@
             <a class="abstract btn btn-sm z-depth-0" role="button">Abstract</a>
 		  <a href="https://dl.acm.org/doi/10.1145/3580305.3599803" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">ACM Digital Library</a>
             <a href="https://arxiv.org/pdf/2306.06108.pdf" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">ArXiv PDF</a>
+		  <a href="/assets/pdf/SIGKDD23_presentation.pdf" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">Presentation Slides</a>
 	    <a href="https://github.com/git-disl/EllipticPlusPlus" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
-            <a href="/assets/pdf/SIGKDD23_presentation.pdf" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">Presentation Slides</a>
 	    <a href="https://github.com/git-disl/EllipticPlusPlus" class="btn btn-sm z-depth-0" role="button" style="padding: 0px;" target="_blank" rel="noopener noreferrer"> <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/git-disl/EllipticPlusPlus?style=flat-square&amp;logo=github" style="height: 22px; padding: 0%; margin: 0%;"> </a>
           </div>
 
