--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
       
         <div class="address">
 	<div style="text-align: center"><p><small>Klaus 2337, CRNCH Lab</small></p></div> <div style="text-align: center"><p><small>266 Ferst Dr NW, Atlanta, GA 30332 USA</small></p></div>
+	<div class="navbar-brand social"><a href="mailto:yelmougy3@gatech.edu" title="email"><i class="fas fa-envelope"></i></a>  <a href="https://scholar.google.com/citations?user=FazAPJYAAAAJ&hl=en" title="Google Scholar" rel="external nofollow noopener" target="_blank"><i class="ai ai-google-scholar"></i></a> <a href="https://www.linkedin.com/in/youssefelmougy/" title="LinkedIn" rel="external nofollow noopener" target="_blank"><i class="fab fa-linkedin"></i></a> </div>
 		
         </div>
       
