--- a/publications/index.html
+++ b/publications/index.html
@@ -284,7 +284,7 @@
           <!-- Links/Buttons -->
           <div class="links">
             <a class="abstract btn btn-sm z-depth-0" role="button">Abstract</a>
-            <a href="https://ieeexplore.ieee.org/abstract/document/10528922" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">IEEE Explore</a>
+            <a href="https://ieeexplore.ieee.org/abstract/document/10528922" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">PDF</a>
 	   <a href="/assets/pdf/ISC24_presentation.pdf" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">Slides</a>
 	   <a href="https://github.com/youssefelmougy/jaccard-selector" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
 	   <a href="https://github.com/youssefelmougy/jaccard-selector" class="btn btn-sm z-depth-0" role="button" style="padding: 0px;" target="_blank" rel="noopener noreferrer"> <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/youssefelmougy/jaccard-selector?style=flat-square&amp;logo=github" style="height: 22px; padding: 0%; margin: 0%;"> </a>
@@ -324,7 +324,7 @@
           <!-- Links/Buttons -->
           <div class="links">
             <a class="abstract btn btn-sm z-depth-0" role="button">Abstract</a>
-            <a href="" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">IEEE Explore (to appear)</a>
+            <a href="" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">PDF (to appear)</a>
 	    <a href="https://2024.ccgrid-conference.org/awards/" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">SCALE 2024 Award</a>
             <a href="/assets/pdf/CCGRID24_presentation.pdf" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">Slides</a>
             <a href="https://youtu.be/knmp_z_cn8Y?si=5Di1BMtp0Bo8opJJ" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">Demo Video</a>
@@ -407,7 +407,7 @@
           <!-- Links/Buttons -->
           <div class="links">
             <a class="abstract btn btn-sm z-depth-0" role="button">Abstract</a>
-		  <a href="https://dl.acm.org/doi/10.1145/3580305.3599803" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">ACM Digital Library</a>
+		  <a href="https://dl.acm.org/doi/10.1145/3580305.3599803" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">PDF</a>
             <a href="https://arxiv.org/pdf/2306.06108.pdf" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">ArXiv PDF</a>
 		  <a href="/assets/pdf/SIGKDD23_presentation.pdf" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">Slides</a>
 	    <a href="https://github.com/git-disl/EllipticPlusPlus" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
@@ -449,7 +449,7 @@
           <!-- Links/Buttons -->
           <div class="links">
             <a class="abstract btn btn-sm z-depth-0" role="button">Abstract</a>
-            <a href="https://ieeexplore.ieee.org/abstract/document/10181177" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">IEEE Explore</a>
+            <a href="https://ieeexplore.ieee.org/abstract/document/10181177" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">PDF</a>
 	    <a href="https://5x0.7f6.myftpupload.com/awards/" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">SCALE 2023 Award</a>
             <a href="/assets/pdf/CCGRID23_presentation.pdf" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">Slides</a>
             <a href="https://youtu.be/fMSbSHhsW0o" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">Demo Video</a>
@@ -489,7 +489,7 @@
           <!-- Links/Buttons -->
           <div class="links">
             <a class="abstract btn btn-sm z-depth-0" role="button">Abstract</a>
-            <a href="https://www.sciencedirect.com/science/article/pii/S1877750323000741?casa_token=Ann_uFV5oyEAAAAA:ziXE-jtdlDVjaDSUWua6fC4f0z0qvToiyEEtaFwOpL9HYKIr6PS9p_H4G_jsuQloZtNFUAaKGuQV" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">ScienceDirect PDF</a>
+            <a href="https://www.sciencedirect.com/science/article/pii/S1877750323000741?casa_token=Ann_uFV5oyEAAAAA:ziXE-jtdlDVjaDSUWua6fC4f0z0qvToiyEEtaFwOpL9HYKIr6PS9p_H4G_jsuQloZtNFUAaKGuQV" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">PDF</a>
           </div>
 
           <!-- Hidden abstract block -->
@@ -532,7 +532,7 @@
           <!-- Links/Buttons -->
           <div class="links">
             <a class="abstract btn btn-sm z-depth-0" role="button">Abstract</a>
-            <a href="https://ieeexplore.ieee.org/abstract/document/9679439" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">IEEE Explore</a>
+            <a href="https://ieeexplore.ieee.org/abstract/document/9679439" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">PDF</a>
             <a href="/assets/pdf/IPCCC_Presentation_Slides.pdf" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">Slides</a>
           </div>
 
@@ -571,7 +571,7 @@
           <!-- Links/Buttons -->
           <div class="links">
             <a class="abstract btn btn-sm z-depth-0" role="button">Abstract</a>
-            <a href="https://ieeexplore.ieee.org/abstract/document/9916625" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">IEEE Explore</a>
+            <a href="https://ieeexplore.ieee.org/abstract/document/9916625" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">PDF</a>
             <a href="/assets/pdf/ICCTA_Presentation_Slides.pdf" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">Slides</a>
           </div>
 
