--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <div class="address">
 	<div style="text-align: center"><p><small>Atlanta, GA USA</small></p></div>
 	<div class="navbar-brand social" style="display: flex; justify-content: center;"><a href="mailto:yelmougy3@gatech.edu" title="email"><i class="fas fa-envelope"></i></a>  <a href="https://scholar.google.com/citations?user=FazAPJYAAAAJ&hl=en" title="Google Scholar" rel="external nofollow noopener" target="_blank"><i class="ai ai-google-scholar"></i></a> <a href="https://www.linkedin.com/in/youssefelmougy/" title="LinkedIn" rel="external nofollow noopener" target="_blank"><i class="fab fa-linkedin"></i></a> </div>
-		
+       <div class="social-icons"> <a href="mailto:yelmougy3@gatech.edu" title="email"><i class="fas fa-envelope"></i></a> <a style="margin: 0 5px 0 0" href="https://scholar.google.com/citations?user=FazAPJYAAAAJ&hl=en" rel="external nofollow noopener" target="_blank"> <i class="ai ai-google-scholar" style="font-size:1.2rem"></i> </a> <a style="margin: 0 5px 0 0" href="https://yelmougy.com/CV.pdf"> <i class="ai ai-cv" style="font-size:1.3rem;"></i> </a> <a style="margin: 0 5px 0 0" href="https://www.linkedin.com/in/youssefelmougy" rel="external nofollow noopener" target="_blank"> <i class="fab fa-linkedin"></i> </a> </div> 
         </div>
       
     </div>
