--- a/awards/index.html
+++ b/awards/index.html
@@ -191,6 +191,26 @@
 
 </div>
 
+
+
+
+		  
+<div class="table">
+
+
+<img width="220px" src="/assets/img/snapshots.png" alt="project thumbnail" align="left" style="margin:15px;" />
+
+
+
+<h2 class="card-title">Strongly correlated electrons</h2>
+
+<p class="card-text">To answer why matter behaves the way it does we need to understand how macroscopic physics emerges from the microscopic laws describing the motions of electrons and atoms. Naturally, things become interesting if particles interact strongly and their collective behavior is starkly different from the behavior of individual constituents. The strange laws of quantum mechanics describing electrons and atoms add some additional spice, but also complexity to this endeavor. I am studying fundamental models describing the physics of interacting electrons to understand how different states of matter emerge. This includes the stripe and pseudogap physics of the hole-doped Hubbard model at finite-temperature which I studied using a tensor network technique called METTS.</p>
+
+</div>
+
+
+
+		  
           </article>
 
         </div>
