--- a/awards/index.html
+++ b/awards/index.html
@@ -198,7 +198,7 @@
 <div class="table">
 
 
-<img width="220px" src="/assets/pdf/scale24_award.pmg" alt="project thumbnail" align="left" style="margin:15px;" />
+<img width="220px" src="/assets/pdf/scale24_award.pmg" alt="SCALE 2024 Award" align="left" style="margin:15px;" />
 
 
 
