--- a/awards/index.html
+++ b/awards/index.html
@@ -198,30 +198,18 @@
 <div class="table">
 
 
-<img width="220px" src="/assets/pdf/scale24_award.pmg" alt="SCALE 2024 Award" align="left" style="margin:15px;" />
+<img width="220px" src="/assets/pdf/scale24_award.png" alt="SCALE 2024 Award" align="left" style="margin:15px;" />
 
 
 
 <h2 class="card-title">IEEE TCSC (Technical Committee on Scalable Computing) International Scalable Computing Challenge (SCALE 2024) Award</h2>
 
-<p class="card-text">🏅 Issued by the IEEE Technical Committee on Scalable Computing (TCSC) at the IEEE/ACM International Symposium on Cluster Computing and the Grid (CCGRID) 2024 conference in May 2024.</p>
-
-<p class="card-text">Paper: A Distributed, Asynchronous Algorithm for Large-Scale Internet Network Topology Analysis.</p>
-<p class="card-text">Authors: <em>Youssef Elmougy</em>, Akihiro Hayashi, Vivek Sarkar.</p>
+<p class="card-text">🏅 Issued by the IEEE Technical Committee on Scalable Computing (TCSC) at the IEEE/ACM International Symposium on Cluster Computing and the Grid (CCGRID) 2024 conference in May 2024. Paper: A Distributed, Asynchronous Algorithm for Large-Scale Internet Network Topology Analysis.</p>
 	
           <div class="links">
-            <a class="abstract btn btn-sm z-depth-0" role="button">Abstract</a>
-            <a href="" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">PDF (to appear)</a>
-	    <a href="https://2024.ccgrid-conference.org/awards/" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">SCALE 2024 Award</a>
-            <a href="/assets/pdf/CCGRID24_presentation.pdf" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">Slides</a>
-            <a href="https://youtu.be/knmp_z_cn8Y?si=5Di1BMtp0Bo8opJJ" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">Demo Video</a>
+	    <a href="https://2024.ccgrid-conference.org/awards/" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">SCALE 2024 Award Website</a>
           </div>
 
-          <!-- Hidden abstract block -->
-          <div class="abstract hidden">
-            <p>With the growing complexity of modern internet networks, we introduce a distributed, asynchronous, and scalable algorithm tailored for determining the centrality and importance of various levels of the global internet network topology at a massive scale. By utilizing triangle formations and neighborhood densities in these complex networks, our algorithm provides valuable insights into the structural importance of individual nodes and the intricate relationships among interconnected entities. Focusing on the global internet's prime components — routers, IP addresses, and Autonomous Systems — the algorithm provides a scalable solution extending to the global internet infrastructure, datacenters, cloud networks, and private networks. By taking advantage of the parallelism, distributed processing, efficient communication, and fine-grained asynchronous execution through an Actor-based programming system, our algorithm is capable of efficiently processing and performing rapid computations on large-scale internet networks. We perform scalability studies on the NERSC Perlmutter supercomputer and the Georgia Tech HPC PACE cluster using three large-scale real-world network datasets and one large-scale synthetic network dataset, achieving up to 91.7% parallel efficiency scaling out to 2K cores and reducing execution time from 5.7 hours to 18.3 seconds, while performing 105.4x better on average compared to related approaches. Our research contributes significantly to facilitating enhanced network management, fault tolerance and resilience, and security, but as well to improving overall network stability, reducing latency, and optimizing energy consumption across the vast internet network devices environment.</p>
-          </div>
-	
 </div>
 
 
