--- a/awards/index.html
+++ b/awards/index.html
@@ -202,13 +202,9 @@
 
 
 
-<h2 class="card-title">IEEE TCSC (Technical Committee on Scalable Computing) International Scalable Computing Challenge (SCALE 2024) Award</h2>
+<h2 class="card-title">IEEE TCSC International Scalable Computing Challenge (SCALE 2024) Award</h2>
 
-<p class="card-text">🏅 Issued by the IEEE Technical Committee on Scalable Computing (TCSC) at the IEEE/ACM International Symposium on Cluster Computing and the Grid (CCGRID) 2024 conference in May 2024. Paper: A Distributed, Asynchronous Algorithm for Large-Scale Internet Network Topology Analysis.</p>
-	
-          <div class="links">
-	    <a href="https://2024.ccgrid-conference.org/awards/" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">SCALE 2024 Award Website</a>
-          </div>
+<p class="card-text">🏅 Issued by the IEEE Technical Committee on Scalable Computing (TCSC) at the IEEE/ACM International Symposium on Cluster Computing and the Grid (CCGRID) 2024 conference in May 2024. Paper: A Distributed, Asynchronous Algorithm for Large-Scale Internet Network Topology Analysis. <a href="https://2024.ccgrid-conference.org/awards/" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">SCALE 2024 Award Website</a>.</p>
 
 </div>
 
