--- a/awards/index.html
+++ b/awards/index.html
@@ -178,18 +178,6 @@
 		
           <article>
             <!-- _pages/awards -->
-<div class="awards">
-
-	<div class="profile float-left"> <figure> <picture> <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="/assets/img/Charles_Kao_Award-480.webp"></source> <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="/assets/img/Charles_Kao_Award-800.webp"></source> <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="/assets/img/Charles_Kao_Award-1400.webp"></source> <img src="/assets/img/Charles_Kao_Award.png" class="img-fluid z-depth-1 rounded" width="auto" height="auto" alt="Charles_Kao_Award.png" onerror="this.onerror=null; $('.responsive-img-srcset').remove();"> </picture> </figure> </div> 
-<div class="clearfix"> <p><strong>Awarded:</strong> Travel Award, School of Arts &amp; Sciences, WPI, Worcester, MA, USA, 2022. </p> </div> 
-
-		<div class="profile float-left"> <figure> <picture> <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="/assets/img/Charles_Kao_Award-480.webp"></source> <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="/assets/img/Charles_Kao_Award-800.webp"></source> <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="/assets/img/Charles_Kao_Award-1400.webp"></source> <img src="/assets/img/Charles_Kao_Award.png" class="img-fluid z-depth-1 rounded" width="auto" height="auto" alt="Charles_Kao_Award.png" onerror="this.onerror=null; $('.responsive-img-srcset').remove();"> </picture> </figure> </div> 
-<div class="clearfix"> <p><strong>Awarded:</strong> Travel Award, School of Arts &amp; Sciences, WPI, Worcester, MA, USA, 2022. </p> </div> 
-
-		<div class="profile float-left"> <figure> <picture> <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="/assets/img/Charles_Kao_Award-480.webp"></source> <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="/assets/img/Charles_Kao_Award-800.webp"></source> <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="/assets/img/Charles_Kao_Award-1400.webp"></source> <img src="/assets/img/Charles_Kao_Award.png" class="img-fluid z-depth-1 rounded" width="auto" height="auto" alt="Charles_Kao_Award.png" onerror="this.onerror=null; $('.responsive-img-srcset').remove();"> </picture> </figure> </div> 
-<div class="clearfix"> <p><strong>Awarded:</strong> Travel Award, School of Arts &amp; Sciences, WPI, Worcester, MA, USA, 2022. </p> </div> 
-
-</div>
 
 
 
@@ -208,6 +196,33 @@
 
 </div>
 
+
+<div class="table">
+
+
+<img width="220px" src="/assets/pdf/scale24_award.png" alt="SCALE 2024 Award" align="left" style="margin:15px;" />
+
+
+
+<h2 class="card-title">IEEE TCSC International Scalable Computing Challenge (SCALE 2024) Award</h2>
+
+<p class="card-text">🏅 Issued by the IEEE Technical Committee on Scalable Computing (TCSC) at the IEEE/ACM International Symposium on Cluster Computing and the Grid (CCGRID) 2024 conference in May 2024. Paper: A Distributed, Asynchronous Algorithm for Large-Scale Internet Network Topology Analysis. <a href="https://2024.ccgrid-conference.org/awards/" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">SCALE 2024 Award Website</a>.</p>
+
+</div>
+
+
+<div class="table">
+
+
+<img width="220px" src="/assets/pdf/scale23_award.png" alt="SCALE 2023 Award" align="left" style="margin:15px;" />
+
+
+
+<h2 class="card-title">IEEE TCSC International Scalable Computing Challenge (SCALE 2023) Award</h2>
+
+<p class="card-text">🏅 Issued by the IEEE Technical Committee on Scalable Computing (TCSC) at the IEEE/ACM International Symposium on Cluster Computing and the Grid (CCGRID) 2023 conference in May 2023. Paper: Highly Scalable Large-Scale Asynchronous Graph Processing using Actors. <a href="https://5x0.7f6.myftpupload.com/awards/" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">SCALE 2023 Award Website</a>.</p>
+
+</div>
 
 
 		  
