--- a/awards/index.html
+++ b/awards/index.html
@@ -192,7 +192,7 @@
 
 <h2 class="card-title">IEEE TCSC International Scalable Computing Challenge (SCALE 2024) Award</h2>
 
-<p class="card-text">🏅 Issued by the IEEE Technical Committee on Scalable Computing (TCSC) at the IEEE/ACM International Symposium on Cluster Computing and the Grid (CCGRID) 2024 conference in May 2024. Paper: A Distributed, Asynchronous Algorithm for Large-Scale Internet Network Topology Analysis. <a href="https://2024.ccgrid-conference.org/awards/" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">SCALE 2024 Award Website</a>.</p>
+<p class="card-text">🏅 Issued by the IEEE Technical Committee on Scalable Computing (TCSC) at the IEEE/ACM International Symposium on Cluster Computing and the Grid (CCGRID) 2024 conference in May 2024. Paper: A Distributed, Asynchronous Algorithm for Large-Scale Internet Network Topology Analysis. <a href="https://2024.ccgrid-conference.org/awards/" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">SCALE 2024 Award Website</a></p>
 
 </div>
 
@@ -200,13 +200,13 @@
 <div class="table">
 
 
-<img width="220px" src="/assets/pdf/scale24_award.png" alt="SCALE 2024 Award" align="left" style="margin:15px;" />
+<img width="220px" src="/assets/pdf/nersc2023_award" alt="NERSC 2023 Award" align="left" style="margin:15px;" />
 
 
 
-<h2 class="card-title">IEEE TCSC International Scalable Computing Challenge (SCALE 2024) Award</h2>
+<h2 class="card-title">Innovative Use of High Performance Computing Award</h2>
 
-<p class="card-text">🏅 Issued by the IEEE Technical Committee on Scalable Computing (TCSC) at the IEEE/ACM International Symposium on Cluster Computing and the Grid (CCGRID) 2024 conference in May 2024. Paper: A Distributed, Asynchronous Algorithm for Large-Scale Internet Network Topology Analysis. <a href="https://2024.ccgrid-conference.org/awards/" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">SCALE 2024 Award Website</a>.</p>
+<p class="card-text">🏅 Issued by the National Energy Research Scientific Computing Center (NERSC) and the U.S. Department of Energy (DOE) Office of Science in November 2023. <a href="https://www.nersc.gov/news-publications/nersc-news/nersc-center-news/2023/five-early-career-researchers-honored-with-nersc-achievement-awards/" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">NERSC Award Website</a></p>
 
 </div>
 
@@ -220,7 +220,7 @@
 
 <h2 class="card-title">IEEE TCSC International Scalable Computing Challenge (SCALE 2023) Award</h2>
 
-<p class="card-text">🏅 Issued by the IEEE Technical Committee on Scalable Computing (TCSC) at the IEEE/ACM International Symposium on Cluster Computing and the Grid (CCGRID) 2023 conference in May 2023. Paper: Highly Scalable Large-Scale Asynchronous Graph Processing using Actors. <a href="https://5x0.7f6.myftpupload.com/awards/" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">SCALE 2023 Award Website</a>.</p>
+<p class="card-text">🏅 Issued by the IEEE Technical Committee on Scalable Computing (TCSC) at the IEEE/ACM International Symposium on Cluster Computing and the Grid (CCGRID) 2023 conference in May 2023. Paper: Highly Scalable Large-Scale Asynchronous Graph Processing using Actors. <a href="https://5x0.7f6.myftpupload.com/awards/" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">SCALE 2023 Award Website</a></p>
 
 </div>
 
