--- a/awards/index.html
+++ b/awards/index.html
@@ -200,7 +200,7 @@
 <div class="table">
 
 
-<img width="220px" src="/assets/pdf/nersc2023_award" alt="NERSC 2023 Award" align="left" style="margin:15px;" />
+<img width="220px" src="/assets/pdf/nersc23_award.png" alt="NERSC 2023 Award" align="left" style="margin:15px;" />
 
 
 
