--- a/awards/index.html
+++ b/awards/index.html
@@ -213,15 +213,18 @@
 <hr />
 <div class="table">
 
-
 <img width="220px" src="/assets/pdf/scale23_award.png" alt="SCALE 2023 Award" align="left" style="margin:15px;" />
-
-
 
 <h2 class="card-title">IEEE TCSC International Scalable Computing Challenge (SCALE 2023) Award</h2>
 
-<p class="card-text">🏅 Issued by the IEEE Technical Committee on Scalable Computing (TCSC) at the IEEE/ACM International Symposium on Cluster Computing and the Grid (CCGRID) 2023 conference in May 2023. Paper: Highly Scalable Large-Scale Asynchronous Graph Processing using Actors. <a href="https://5x0.7f6.myftpupload.com/awards/" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">SCALE 2023 Award Website</a></p>
+<p class="card-text">🏅 Issued by the IEEE Technical Committee on Scalable Computing (TCSC) at the IEEE/ACM International Symposium on Cluster Computing and the Grid (CCGRID) 2023 conference.</p>
 
+<p class="card-text">📝 Paper: Highly Scalable Large-Scale Asynchronous Graph Processing using Actors.</p>
+
+<p class="card-text">📅 Awarded in May 2023.</p>
+
+<p class="card-text">🌐 <a href="https://5x0.7f6.myftpupload.com/awards/" target="_blank" rel="noopener noreferrer">SCALE 2023 Award Website</a>.</p>
+	
 </div>
 
 
