--- a/awards/index.html
+++ b/awards/index.html
@@ -196,6 +196,19 @@
 
 </div>
 
+
+		  
+<div class="table">
+
+<img width="220px" src="/assets/pdf/scale24_award.png" alt="SCALE 2024 Award" align="left" style="margin:15px;" />
+
+<h2 class="card-title">IEEE TCSC International Scalable Computing Challenge (SCALE 2024) Award</h2>
+
+<p class="card-text">🏅 Issued by the IEEE Technical Committee on Scalable Computing (TCSC) at the IEEE/ACM International Symposium on Cluster Computing and the Grid (CCGRID) 2024 conference. 📅 Awarded in May 2024. 🌐 <a href="https://2024.ccgrid-conference.org/awards/" target="_blank" rel="noopener noreferrer">SCALE 2024 Award Website</a>.</p>
+	
+</div>
+
+		  
 <hr />
 <div class="table">
 
