--- a/awards/index.html
+++ b/awards/index.html
@@ -182,22 +182,7 @@
 
 
 
-	<hr />	  
-<div class="table">
-
-
-<img width="220px" src="/assets/pdf/scale24_award.png" alt="SCALE 2024 Award" align="left" style="margin:15px;" />
-
-
-
-<h2 class="card-title">IEEE TCSC International Scalable Computing Challenge (SCALE 2024) Award</h2>
-
-<p class="card-text">🏅 Issued by the IEEE Technical Committee on Scalable Computing (TCSC) at the IEEE/ACM International Symposium on Cluster Computing and the Grid (CCGRID) 2024 conference in May 2024. Paper: A Distributed, Asynchronous Algorithm for Large-Scale Internet Network Topology Analysis. <a href="https://2024.ccgrid-conference.org/awards/" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">SCALE 2024 Award Website</a></p>
-
-</div>
-
-
-		  
+<hr />	    
 <div class="table">
 
 <img width="220px" src="/assets/pdf/scale24_award.png" alt="SCALE 2024 Award" align="left" style="margin:15px;" />
@@ -212,17 +197,15 @@
 <hr />
 <div class="table">
 
-
 <img width="220px" src="/assets/pdf/nersc23_award.png" alt="NERSC 2023 Award" align="left" style="margin:15px;" />
-
-
 
 <h2 class="card-title">Innovative Use of High Performance Computing Award</h2>
 
-<p class="card-text">🏅 Issued by the National Energy Research Scientific Computing Center (NERSC) and the U.S. Department of Energy (DOE) Office of Science in November 2023. <a href="https://www.nersc.gov/news-publications/nersc-news/nersc-center-news/2023/five-early-career-researchers-honored-with-nersc-achievement-awards/" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">NERSC Award Website</a></p>
+<p class="card-text">🏅 Issued by the National Energy Research Scientific Computing Center (NERSC) and the U.S. Department of Energy (DOE) Office of Science. 📅 Awarded in November 2023. 🌐 <a href="https://www.nersc.gov/news-publications/nersc-news/nersc-center-news/2023/five-early-career-researchers-honored-with-nersc-achievement-awards/" target="_blank" rel="noopener noreferrer">NERSC Award Website</a>.</p>
 
 </div>
 
+		  
 <hr />
 <div class="table">
 
@@ -230,13 +213,7 @@
 
 <h2 class="card-title">IEEE TCSC International Scalable Computing Challenge (SCALE 2023) Award</h2>
 
-<p class="card-text">🏅 Issued by the IEEE Technical Committee on Scalable Computing (TCSC) at the IEEE/ACM International Symposium on Cluster Computing and the Grid (CCGRID) 2023 conference.</p>
-
-<p class="card-text">📝 Paper: Highly Scalable Large-Scale Asynchronous Graph Processing using Actors.</p>
-
-<p class="card-text">📅 Awarded in May 2023.</p>
-
-<p class="card-text">🌐 <a href="https://5x0.7f6.myftpupload.com/awards/" target="_blank" rel="noopener noreferrer">SCALE 2023 Award Website</a>.</p>
+<p class="card-text">🏅 Issued by the IEEE Technical Committee on Scalable Computing (TCSC) at the IEEE/ACM International Symposium on Cluster Computing and the Grid (CCGRID) 2023 conference. 📅 Awarded in May 2023. 🌐 <a href="https://5x0.7f6.myftpupload.com/awards/" target="_blank" rel="noopener noreferrer">SCALE 2023 Award Website</a>.</p>
 	
 </div>
 
