--- a/experience/gtphd/index.html
+++ b/experience/gtphd/index.html
@@ -27,7 +27,7 @@
 
 <!-- Styles -->
 
-<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🔥</text></svg>">
+<link rel="icon" href="/assets/pdf/ye_logo.png">
 
 <link rel="stylesheet" href="/assets/css/main.css">
 
@@ -199,7 +199,7 @@
     
 <footer class="fixed-bottom">
   <div class="container mt-0">
-    © Copyright 2022 Youssef Elmougy.
+    © Copyright 2024 Youssef Elmougy.
     Please <a href="mailto:yelmougy3@gatech.edu">email me</a> to get in contact! 
 
     
