--- a/experience/index.html
+++ b/experience/index.html
@@ -373,7 +373,7 @@
           
             <a href="/experience/gtbs/">
           
-          <div class="exptitle">B.S in Computer Science, Concentration in Intelligence & Modeling</div>
+          <div class="exptitle">B.S in Computer Science, Concentration in Artificial Intelligence & Computer Modeling</div>
           <div class="expdesc">Georgia Institute of Technology, USA</div>
           </a>
         </div>
