--- a/experience/gtbs/index.html
+++ b/experience/gtbs/index.html
@@ -183,7 +183,7 @@
 
     <p>The Georgia Institute of Technology, commonly referred to as Georgia Tech, is a public research university and institute of technology in Atlanta, Georgia.</p>
 
-    <p>I studied Computer Science in the College of Computing at Georgia Tech, with a concentration in <b>artificial intelligence</b> and <b>computer modeling</b>. I graduated in Dec 2021.</p>
+    <p>I studied Computer Science in the College of Computing at Georgia Tech, with a concentration in <b>artificial intelligence</b> and <b>computer modeling</b>. I graduated in <b>Dec 2021</b> with <b>Highest Honors</b>.</p>
     
     <p><b>GPA: 3.8/4.0</b></p>
    
