--- a/experience/gtms/index.html
+++ b/experience/gtms/index.html
@@ -178,9 +178,9 @@
 
     <p>The Georgia Institute of Technology, commonly referred to as Georgia Tech, is a public research university and institute of technology in Atlanta, Georgia.</p>
 
-    <p>I am currently completing my Masters in Computer Science in the College of Computing at Georgia Tech, with a concentration in <b>high performance computing</b>.</p>
+    <p>I completed my Masters in Computer Science in the College of Computing at Georgia Tech, with a concentration in <b>high performance computing</b>. I graduated in <b>Dec 2022</b>.</p>
     
-    <p><b>Anticipated Graduation: December 2022</b></p>
+    <p><b>GPA: 3.6/4.0</b></p>
    
 
     <h2>Achievements</h2>
