--- a/experience/gtms/index.html
+++ b/experience/gtms/index.html
@@ -189,7 +189,7 @@
       <li>IEEE-HKN Honor Society Student Member</li>
     </ul>
       
-    <h2>Research done at Georgia Tech</h2>
+    <h2>Research done at Georgia Tech (M.S.)</h2>
     
 	<p><strong>Research Assistant in the Habanero Extreme Scale Software Research Laboratory</strong>:</p>
 	  
