--- a/experience/gtms/index.html
+++ b/experience/gtms/index.html
@@ -213,12 +213,15 @@
       
       <ul>
 	<li>CS 6035 - Intro To Info Security</li>
+	<li>CS 6210 - Advanced Operating Systems</li>
 	<li>CS 6260 - Applied Cryptography</li>
 	<li>CS 6290 - High Perform Comput Arch</li>
 	<li>CS 6390 - Programming Languages</li>
         <li>CS 6454 - Qualitative Methods HCI</li>
 	<li>CS 6515 - Intro to Grad Algorithms</li>
+	<li>CS 7210 - Distributed Computing</li>
         <li>CS 7637 - Knowledge-Based AI</li>
+	<li>CS 7641 - Machine Learning</li>
         <li>CS 7643 - Deep Learning</li>
 	<li>CSE 6220 - High Perform Computing</li>
       </ul>
