--- a/experience/gtms/index.html
+++ b/experience/gtms/index.html
@@ -193,7 +193,7 @@
     
 	<p><strong>Research Assistant in the Habanero Extreme Scale Software Research Laboratory</strong> (May 2022 - Aug 2022):</p>
 	  
-	  <p>INSERT PHD RESEARCH</p>
+       <p>🌐 <a href="/experience/rahabanero/">Graduate Research Assistant in the Habanero Extreme Scale Software Research Laboratory at Georgia Tech</a></p>
 
     <h2>Courses TA'd (M.S.)</h2>
     
