--- a/experience/gtbs/index.html
+++ b/experience/gtbs/index.html
@@ -192,7 +192,7 @@
       
     <h2>Research done at Georgia Tech (B.S.)</h2>
     
-  <p>🌐 <a href="/experience/aad/">Machine Learning Research Assistant with the Automated Algorithm Design (AAD) at Georgia Tech</a></p>
+  <p>🌐 <a href="/experience/aad/">Machine Learning Research Assistant with the Automated Algorithm Design (AAD) team at Georgia Tech</a></p>
 
 
     <h2>Courses TA'd (B.S.)</h2>
