--- a/experience/index.html
+++ b/experience/index.html
@@ -152,7 +152,7 @@
           
             <a href="/experience/rahabanero/">
           
-          <div class="exptitle">Systems Research Assistant</div>
+          <div class="exptitle">Graduate Research Assistant</div>
           <div class="expdesc">Habanero Extreme Scale Software Research Laboratory, Georgia Institute of Technology</div>
           </a>
         </div>
