--- a/experience/aircairo/index.html
+++ b/experience/aircairo/index.html
@@ -144,7 +144,7 @@
 
 		
           <li class="nav-item ">
-              <a class="nav-link" href="/assets/pdf/ElmougyYoussef_Resume.pdf">
+              <a class="nav-link" href="https://yelmougy.com/CV.pdf">
                 CV
                 
               </a>
