--- a/experience/berkeley/index.html
+++ b/experience/berkeley/index.html
@@ -144,8 +144,9 @@
           
 
 		
+		
           <li class="nav-item ">
-              <a class="nav-link" href="/assets/pdf/ElmougyYoussef_Resume.pdf">
+              <a class="nav-link" href="https://yelmougy.com/CV.pdf">
                 CV
                 
               </a>
