--- a/index.html
+++ b/index.html
@@ -429,6 +429,8 @@
           <div class="links">
             <a class="abstract btn btn-sm z-depth-0" role="button">Abstract</a>
             <a href="https://www.sciencedirect.com/science/article/pii/S1877750323000741?casa_token=Ann_uFV5oyEAAAAA:ziXE-jtdlDVjaDSUWua6fC4f0z0qvToiyEEtaFwOpL9HYKIr6PS9p_H4G_jsuQloZtNFUAaKGuQV" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">PDF</a>
+	   <a href="https://github.com/srirajpaul/hclib/tree/bale3_actor" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">GitHub Repo</a>
+	   <a href="https://github.com/srirajpaul/hclib/tree/bale3_actor" class="btn btn-sm z-depth-0" role="button" style="padding: 0px;" target="_blank" rel="noopener noreferrer"> <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/srirajpaul/hclib?style=flat-square&amp;logo=github" style="height: 22px; padding: 0%; margin: 0%;"> </a>
           </div>
 
           <!-- Hidden abstract block -->
