--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
           <!-- Links/Buttons -->
           <div class="links">
             <a class="abstract btn btn-sm z-depth-0" role="button">Abstract</a>
-            <a href="" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">PDF (to appear)</a>
+            <a href="https://ieeexplore.ieee.org/abstract/document/10701398" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">PDF</a>
 	    <a href="https://2024.ccgrid-conference.org/awards/" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">SCALE 2024 Award</a>
             <a href="/assets/pdf/CCGRID24_presentation.pdf" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">Slides</a>
             <a href="https://youtu.be/knmp_z_cn8Y?si=5Di1BMtp0Bo8opJJ" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener noreferrer">Demo Video</a>
